# coffee

./: .drone.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cuddle.yaml
.cuddle/tmp/: cuddle-rust-cli-plan.yaml
ci/: Cargo.toml
ci/src/: main.rs
crates/coffee/: Cargo.toml
crates/coffee/src/: main.rs
crates/gitea_client/: Cargo.toml  README.md
crates/gitea_client/.openapi-generator/: FILES
crates/gitea_client/docs/: Activity.md  ActivitypubApi.md  AdminApi.md  ChangeFilesOptions.md  CreateLabelOption.md  CreateUserOption.md  EditLabelOption.md  EditRepoOption.md  FilesResponse.md  Hook.md  Issue.md  IssueApi.md  IssueConfig.md  Label.md  MiscellaneousApi.md  Organization.md  OrganizationApi.md  PullRequest.md  Repository.md  RepositoryApi.md  UserApi.md
crates/gitea_client/src/apis/: activitypub_api.rs  admin_api.rs  configuration.rs  issue_api.rs  miscellaneous_api.rs  notification_api.rs  organization_api.rs  package_api.rs  repository_api.rs  settings_api.rs  user_api.rs
crates/gitea_client/src/models/: access_token.rs  activity.rs  activity_pub.rs  add_collaborator_option.rs  add_time_option.rs  annotated_tag.rs  annotated_tag_object.rs  api_error.rs  attachment.rs  branch.rs  branch_protection.rs  change_file_operation.rs  change_files_options.rs  changed_file.rs  combined_status.rs  comment.rs  commit.rs  commit_affected_files.rs  commit_date_options.rs  commit_meta.rs  commit_stats.rs  commit_status.rs  commit_status_state.rs  commit_user.rs  contents_response.rs  create_access_token_option.rs  create_branch_protection_option.rs  create_branch_repo_option.rs  create_email_option.rs  create_file_options.rs  create_fork_option.rs  create_gpg_key_option.rs  create_hook_option.rs  create_hook_option_config.rs  create_issue_comment_option.rs  create_issue_option.rs  create_key_option.rs  create_label_option.rs  create_milestone_option.rs  create_o_auth2_application_options.rs  (+144 more)
crates/service/: Cargo.toml
crates/service/src/: main.rs
scripts/: generate_client.sh  install.sh
