[workspace]
members = ["crates/coffee", "crates/gitea_client", "ci"]
resolver = "2"

[workspace.dependencies]
coffee = { path = "crates/coffee" }
gitea_client = { path = "crates/gitea_client" }

anyhow = { version = "1.0.79" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.18" }
clap = { version = "4.4.13", features = ["derive", "env"] }
dotenv = { version = "0.15.0" }
axum = { version = "0.7.3" }
inquire = { version = "0.6.2" }
