[workspace]
members = ["crates/coffee", "crates/gitea_client", "ci"]
resolver = "2"

[workspace.dependencies]
coffee = { path = "crates/coffee" }
gitea_client = { path = "crates/gitea_client" }

anyhow = { version = "1.0.81" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.18" }
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = { version = "0.15.0" }
axum = { version = "0.7.5" }
inquire = { version = "0.7.4" }
