[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
coffee = { path = "crates/coffee" }
gitea-client = { git = "https://git.front.kjuulh.io/kjuulh/gitea-rs", branch = "main" }

anyhow = { version = "1.0.74" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17" }
clap = { version = "4.3.21", features = ["derive", "env"] }
dotenv = { version = "0.15.0" }
axum = { version = "0.8.0" }
inquire = { version = "0.7.0", features = ["editor"] }

[workspace.package]
version = "0.1.0"
