[package]
name = "coffee"
version = "0.1.0"
edition = "2021"

[dependencies]
gitea_client.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenv.workspace = true
axum.workspace = true
url = "2.4.0"
git-url-parse = "0.4.4"
webbrowser = "0.8.10"
